    - fixed edge case where `stopping` an Instance just before Banner Generator fires would cause the loop to crash.
- changes to `whitelist_cog.py`
    - added validation of `Whitelist_request_channel` when enabling auto-whitelist. Should warn if channel doesn't exists and or not set.
    - fixed edge case with `__remove_commands()` on first time startup failing to find command group.
- relocated `getWhitelist` to `amp_minecraft.py`, there is a generic method inside of `AMP.py` for linters.
- added extensive documentation to `amp_template.py`
    - added required methods and notes to indicate this.
- Updated `loader.py`
    - Revamped the entire `cog_auto_loader` to better handle cogs that rely on other cogs.
    - Cogs will now require a `Dependencies` var at the top of their files and will use a list to define any required cogs they need to load. If the cog has no dependency set it to `None`
        - See `cog_template.py` for examples if needed.
- Created `REGEX.md`
    - Here you will find useful information regarding Console Filtering and how to impliment Regex filtering.
- Updated `Commands.md`
    - Fixed spelling mistakes and cleaned up formatting of commands.
    - Removed documenation for commands that no longer exist; updated documenation for commands that have changed.
- Updated `AMP.py`
    - Changed logic inside of `Login()` to better handle SessionIDs when an Instance is offline.
- Updated `AMP_Console.py`
    - Fixed logic inside of `console_filter()` when handling Event type filtering.
    - Added two `dev` print statements.


__**HotFix 4.4.9**__
- changed default `DBBanner` blur amount to `0`
- fixed issue in `on_command_error`
- Updated `banner_creator.py`
    - fixed issue with `banner_creator.py` raising an issue about `_font_Whitelist_y` not existing. Thanks @IceOfWraith#6057
    - changed resolution of Banners in `banner_creator.py` from `1800x600` to `800x270`
        - changed `self._font_default_size` from 25 to 12